Fix for map display on small screens

--- a/css/site.css
+++ b/css/site.css
@@ -49,7 +49,7 @@ a:visited {
   transition: opacity .5s ease-in-out;
   -moz-transition: opacity .5s ease-in-out;
   -webkit-transition: opacity .5s ease-in-out;
-  flex: 1 1 300px;
+  flex: 1 1 auto;
   background: lightpink;
   height: 100vh;
 }
